[package]
name = "simplemdviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.122"
cxx-qt = { git = "https://github.com/KDAB/cxx-qt", branch = "main" }
cxx-qt-lib = { git = "https://github.com/KDAB/cxx-qt", branch = "main" }
# cxx-qt = "0.6.1"
# cxx-qt-lib = "0.6.1"
markdown = "=1.0.0-alpha.17"

[build-dependencies]
cxx-qt-build = { git = "https://github.com/KDAB/cxx-qt", branch = "main", features = ["link_qt_object_files"]}
# cxx-qt-build = { version = "0.6.1", features = ["link_qt_object_files"] }
